--- a/materialsidebar/css/style.css
+++ b/materialsidebar/css/style.css
@@ -52,7 +52,7 @@ html,
 body {
   position: relative;
   min-height: 100%;
-  height: 100%;
+  /*height: 100%;*/
 }
 body {
   font-family: 'RobotoDraft', 'Roboto', 'Helvetica Neue, Helvetica, Arial', sans-serif;
@@ -140,7 +140,6 @@ body {
 .sidebar {
   position: relative;
   display: block;
-  min-height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   border: none;
