fixed font weight in sidebar

--- a/template/material.css
+++ b/template/material.css
@@ -864,7 +864,8 @@ p {
 
 a {
   color: rgb(255,64,129);
-  font-weight: 500; }
+  /*font-weight: 500; */
+}
 
 blockquote {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
