--- a/materialsidebar/css/style.css
+++ b/materialsidebar/css/style.css
@@ -52,7 +52,7 @@ html,
 body {
   position: relative;
   min-height: 100%;
-  /*height: 100%;*/
+  height: 100%;
 }
 body {
   font-family: 'RobotoDraft', 'Roboto', 'Helvetica Neue, Helvetica, Arial', sans-serif;
@@ -352,7 +352,7 @@ body {
   padding-right: 56px;
   text-decoration: none;
   clear: both;
-  font-weight: 500;
+  /*font-weight: 500;*/
   overflow: hidden;
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
